--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
         <header>          
             <!-- Floating social media icon -->
-            <a href="https://www.facebook.com/officiallawncareco" class="float-icon facebook" target="_blank">
+            <a href="https://m.facebook.com/people/Offic-Lawncare-Co" class="float-icon facebook" target="_blank">
             <img src="transparentFace.png" alt="Official Lawn Care Co on Facebook">
             </a>
             
