--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="logo.jpg" alt="Official Lawn Care Co Logo" class="logo">
             
             <!-- Floating social media icon -->
-            <a href="https://instagram.com/officiallawncareco?igshid=NTc4MTIwNjQ2YQ==" class="float-icon instagram" target="_blank">
+            <a href="https://instagram.com/officiallawncareco" class="float-icon instagram" target="_blank">
             <img src="transparentInsta.png" alt="Official Lawn Care Co on Instagram">
             </a>
         </header>
