--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <h1>Official Lawn Care Co</h1>
             <h2>Friendly, Fast, and Affordable Lawn Care</h2>
             <img src="" alt="A beautiful lawn" class="lawn">
+            <a href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/">Facebook</a>
+            <a href="https://instagram.com/officiallawncareco">Instagram</a>
+            <a href="url">Tik Tok</a>
             <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
