More CSS changes to social media links

--- a/index.html
+++ b/index.html
@@ -7,19 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-        <header>          
-            <!-- Floating social media icon -->
-            <a href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/" class="float-icon facebook" target="_blank">
-            <img src="transparentFace.png" alt="Official Lawn Care Co on Facebook">
-            </a>
-            
-            <!-- Company Logo -->
+        <header>         
+             <!-- Company Logo -->
             <img src="logo.jpg" alt="Official Lawn Care Co Logo" class="logo">
-            
-            <!-- Floating social media icon -->
-            <a href="https://instagram.com/officiallawncareco" class="float-icon instagram" target="_blank">
-            <img src="transparentInsta.png" alt="Official Lawn Care Co on Instagram">
-            </a>
         </header>
 
         <main>
@@ -27,9 +17,9 @@
             <h2>Friendly, Fast, and Affordable Lawn Care</h2>
             <img src="" alt="A beautiful lawn" class="lawn">
             <div id="social-container">
-            <a id="social-link" href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/">Facebook</a>
-            <a id="social-link" href="https://instagram.com/officiallawncareco">Instagram</a>
-            <a id="social-link" href="url">Tik Tok</a>
+            <a id="social-link" class="facebook" href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/" target="_blank">Facebook</a>
+            <a id="social-link" class="instagram" href="https://instagram.com/officiallawncareco" target="_blank">Instagram</a>
+            <a id="social-link" href="tik-tok" target="_blank">Tik Tok</a>
             </div>
             <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
                 <label for="name">Name:</label>
