Commented out unused image.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <main>
             <h1>Official Lawn Care Co</h1>
             <h2>Friendly, Fast, and Affordable Lawn Care</h2>
-            <img src="" alt="A beautiful lawn" class="lawn">
-            <div id="social-container">
+            <!-- <img src="" alt="A beautiful lawn" class="lawn">
+            <div id="social-container"> -->
             <a id="social-link" class="facebook" href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/" target="_blank">Facebook</a>
             <a id="social-link" class="instagram" href="https://instagram.com/officiallawncareco" target="_blank">Instagram</a>
             <a id="social-link" class="tik-tok"  href="tik-tok" target="_blank">Tik Tok</a>
