--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div id="social-container"> -->
             <a id="social-link" class="facebook" href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/" target="_blank">Facebook</a>
             <a id="social-link" class="instagram" href="https://instagram.com/officiallawncareco" target="_blank">Instagram</a>
-            <a id="social-link" class="tik-tok"  href="tik-tok" target="_blank">Tik Tok</a>
+            <a id="social-link" class="tik-tok"  href="https://www.tiktok.com/@officiallawncareco?_t=8c0eab1eMRP&_r=1" target="_blank">Tik Tok</a>
             </div>
             <!-- <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
                 <label for="name">Name:</label>
