--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </header>
 
         <main>
-            <h1>Official Lawn Care Co</h1>
-            <h2>Friendly, Fast, and Affordable Lawn Care</h2>
+            <h1>Bio</h1>
+            <h2>Incoming</h2>
             <!-- <img src="" alt="A beautiful lawn" class="lawn">
             <div id="social-container"> -->
             <a id="social-link" class="facebook" href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/" target="_blank">Facebook</a>
