Attempt to make links look good on desktop.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
         <main>
             <h1>Bio</h1>
             <h2>Incoming</h2>
-            <!-- <img src="" alt="A beautiful lawn" class="lawn">
-            <div id="social-container"> -->
+            <!-- <img src="" alt="A beautiful lawn" class="lawn"> -->
+            <div id="social-container">
             <a id="social-link" class="facebook" href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/" target="_blank">Facebook</a>
+            </div>
+            <div id="social-container">
             <a id="social-link" class="instagram" href="https://instagram.com/officiallawncareco" target="_blank">Instagram</a>
+            </div>
+            <div id="social-container">
             <a id="social-link" class="tik-tok"  href="https://www.tiktok.com/@officiallawncareco?_t=8c0eab1eMRP&_r=1" target="_blank">Tik Tok</a>
             </div>
             <!-- <form action="mailto:your-email@example.com" method="post" enctype="text/plain">
