I added a fourth social link changed the h2 text added a black background for the header converted all css to scss

--- a/index.html
+++ b/index.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Official Lawn Care Co</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-        <header>         
-             <!-- Company Logo -->
-            <img src="logo.jpg" alt="Official Lawn Care Co Logo" class="logo">
-        </header>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Official Lawn Care Co</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
+    <header>
+      <!-- Company Logo -->
+      <img src="imgs/logo.jpg" alt="Official Lawn Care Co Logo" class="logo" />
+    </header>
 
-        <main>
-            <h1>Bio</h1>
-            <h2>Incoming</h2>
-            <!-- <img src="" alt="A beautiful lawn" class="lawn"> -->
-            <div id="social-container">
-            <a id="social-link" class="facebook" href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/" target="_blank">Facebook</a>
-            </div>
-            <div id="social-container">
-            <a id="social-link" class="instagram" href="https://instagram.com/officiallawncareco" target="_blank">Instagram</a>
-            </div>
-            <div id="social-container">
-            <a id="social-link" class="tik-tok"  href="https://www.tiktok.com/@officiallawncareco?_t=8c0eab1eMRP&_r=1" target="_blank">Tik Tok</a>
-            </div>
-        </main>
-            <footer>
-                
-            </footer>
-</body>
+    <main class="grid-container">
+      <h1>A green lawn <br>is a beautiful lawn</h1>
+      <!-- <img src="" alt="A beautiful lawn" class="lawn"> -->
+      <a
+        id="social-link"
+        class="facebook"
+        href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/"
+        target="_blank"
+        >Facebook</a
+      >
+      <a
+        id="social-link"
+        class="instagram"
+        href="https://instagram.com/officiallawncareco"
+        target="_blank"
+        >Instagram</a
+      >
+      <a
+        id="social-link"
+        class="tik-tok"
+        href="https://www.tiktok.com/@officiallawncareco?_t=8c0eab1eMRP&_r=1"
+        target="_blank"
+        >Tik Tok</a
+      >
+      <a
+      id="social-link"
+      class="myspace"
+      href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/"
+      target="_blank"
+      >MySpace</a
+    >
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
