added images to present to the client for a design idea adjusted mobile site for sleakness

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     </header>
 
     <main class="grid-container">
-      <h1>A green lawn <br>is a beautiful lawn</h1>
-      <!-- <img src="" alt="A beautiful lawn" class="lawn"> -->
+      <h1>A green lawn <br />is a beautiful lawn</h1>
       <a
         id="social-link"
         class="facebook"
@@ -41,12 +40,15 @@
         >Tik Tok</a
       >
       <a
-      id="social-link"
-      class="myspace"
-      href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/"
-      target="_blank"
-      >MySpace</a
-    >
+        id="social-link"
+        class="myspace"
+        href="https://m.facebook.com/people/Offic-Lawncare-Co/100089015297900/"
+        target="_blank"
+        >MySpace</a
+      >
+
+      <img src="/imgs/images1.jpg" alt="A beautiful lawn" class="lawn" />
+      <!-- <img src="/imgs/images2.jpg" alt="A beautiful lawn" class="lawn" /> -->
     </main>
 
     <footer></footer>
