added a second image and moved both images into a div to setup for a potential idea for the page

--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
         target="_blank"
         >MySpace</a
       >
-
+<div>
       <img src="/imgs/images1.jpg" alt="A beautiful lawn" class="lawn" />
-      <!-- <img src="/imgs/images2.jpg" alt="A beautiful lawn" class="lawn" /> -->
+      <img src="/imgs/images2.jpg" alt="A beautiful lawn" class="lawn" />
+</div>
     </main>
 
     <footer></footer>
